fix(xray): this call to method 'addAll' will throw an UnsupportedOperationException when executed.
- Unsupported methods should not be called on some collection implementations javabugs:S6322